--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,13 @@ color: white;
   font-family: 'Raleway', sans-serif;
 }
 
+header {
+  padding: 1.5rem;
+  height: 96px;
+  display: flex;
+  align-items: center;
+}
+
 .wh-l {
   width: 800px;
   height: 400px;
@@ -44,8 +51,6 @@ color: white;
 .offscreen{
   display: none;
 }
-/* login */
-
 
 .wh-chat {
   width: 100%;
