--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,8 +20,8 @@ color: white;
 }
 
 header {
-  padding: 1.5rem;
-  height: 96px;
+  padding: 0 2rem;
+  height: 108px;
   display: flex;
   align-items: center;
 }
